--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -116,14 +116,16 @@
 
     <!-- Off-canvas Element 1 -->
     <nav id="slideInMenu" class="offside">
-        <div class="slide-in-menu-header">
-            <a class="slide-in-menu-close" href="javascript:void(0)"><i class="fa fa-angle-right"></i></a>
-            <h1>Your Order</h1>
-            <span class="header-cart-icon cart-items">
-                <span class="cart-count-wrap"><span class="cart-count">20</span></span>
-            </span>
+        <div class="slideInMenuInner">
+            <div class="slide-in-menu-header">
+                <a class="slide-in-menu-close" href="javascript:void(0)"><i class="fa fa-angle-right"></i></a>
+                <h1>Your Order</h1>
+                <span class="header-cart-icon cart-items">
+                    <span class="cart-count-wrap"><span class="cart-count">20</span></span>
+                </span>
+            </div>
+            <div id="CartContainer"></div>
         </div>
-        <div id="CartContainer"></div>
     </nav>
 
     <!-- Google Tag Manager (noscript) -->
