--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -467,10 +467,10 @@ button {outline: 0;}
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #fff;
-    border-bottom: 0px;
+    border: 0px !important;
     font-size: 12px;
     text-align: center;
-    /*padding-top: 52px;*/
+    padding-top: 50px;
 }
 .navbar-custom-inner {
   position: fixed;
@@ -3101,8 +3101,7 @@ select#sortby {
 body, html{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    -webkit-overflow-scrolling: auto;
-    overflow-x: hidden;    
+    -webkit-overflow-scrolling: auto;   
 }
 
 /* Hero Banner */
