--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -1303,8 +1303,9 @@ ul.dropdown-menu div.submenu-content-wrap > .submenu-content a{
 
 /* home page -  meal plan banner */
 .meal-plan-banner {
-  /* max-width: 1400px; */
-  margin: 50px auto;
+  width: 100%;
+  overflow: hidden;
+  margin: 50px 0;  
   text-align: center;
 }
 .meal-plan-banner h3 {
