--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -113,6 +113,7 @@
     {% comment %} Main Nav {% endcomment %}
     {% include 'nav-menu' %}
     {% include 'nav-menu-green' %}
+    {% comment %}{% include 'nav-menu-bottom' %}{% endcomment %}
 
     <!-- Off-canvas Element 1 -->
     <nav id="slideInMenu" class="offside">
