--- a/snippets/nav-menu.liquid
+++ b/snippets/nav-menu.liquid
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-custom" role="navigation">
-    <!--<div class="navbar-custom-inner">-->
+    <div class="navbar-custom-inner">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -76,5 +76,5 @@
                 </div>
             </div>
         </div>
-    <!--</div>-->
+    </div>
 </nav>
